# audio-generator

./: .gitignore  README.md  pyproject.toml
src/audio_generator_cli/: __init__.py  cli.py  main.py
src/audio_generator_cli/domain/: __init__.py  models.py  ports.py
src/audio_generator_cli/infrastructure/: __init__.py
src/audio_generator_cli/infrastructure/llm/: __init__.py  openai_speech_audio_generator.py
src/audio_generator_cli/infrastructure/logging/: __init__.py  logger_factory.py
tests/: test_cli.py  test_openai_speech_audio_generator.py
